--- a/package.json
+++ b/package.json
@@ -1,5 +1,71 @@
 {
+  "name": "e-commerce",
+  "version": "1.0.0",
+  "description": "Object-Relational Mapping (ORM) Challenge",
+  "main": "server.js",
   "dependencies": {
-    "express": "^4.17.3"
-  }
+    "accepts": "^1.3.8",
+    "content-disposition": "^0.5.4",
+    "body-parser": "^1.19.2",
+    "array-flatten": "^1.1.1",
+    "bytes": "^3.1.2",
+    "content-type": "^1.0.4",
+    "cookie": "^0.4.2",
+    "cookie-signature": "^1.0.6",
+    "destroy": "^1.0.4",
+    "debug": "^2.6.9",
+    "depd": "^1.1.2",
+    "encodeurl": "^1.0.2",
+    "ee-first": "^1.1.1",
+    "etag": "^1.8.1",
+    "escape-html": "^1.0.3",
+    "express": "^4.17.3",
+    "finalhandler": "^1.1.2",
+    "fresh": "^0.5.2",
+    "forwarded": "^0.2.0",
+    "inherits": "^2.0.4",
+    "iconv-lite": "^0.4.24",
+    "http-errors": "^1.8.1",
+    "methods": "^1.1.2",
+    "merge-descriptors": "^1.0.1",
+    "media-typer": "^0.3.0",
+    "ipaddr.js": "^1.9.1",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "on-finished": "^2.3.0",
+    "mime-types": "^2.1.35",
+    "path-to-regexp": "^0.1.7",
+    "parseurl": "^1.3.3",
+    "qs": "^6.9.7",
+    "raw-body": "^2.4.3",
+    "range-parser": "^1.2.1",
+    "safe-buffer": "^5.2.1",
+    "proxy-addr": "^2.0.7",
+    "safer-buffer": "^2.1.2",
+    "serve-static": "^1.14.2",
+    "statuses": "^1.5.0",
+    "setprototypeof": "^1.2.0",
+    "toidentifier": "^1.0.1",
+    "send": "^0.17.2",
+    "type-is": "^1.6.18",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rfields03/e-commerce.git"
+  },
+  "author": "Robert Field",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Rfields03/e-commerce/issues"
+  },
+  "homepage": "https://github.com/Rfields03/e-commerce#readme"
 }
